# ReadmitRx

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.in  requirements.lock.txt  requirements.txt
.dev/: initial_project_Setup.md  scaffold_readmitrx.sh
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: input_data.csv  processed_visits_cleaned.csv
readmitrx/cluster/: cluster.py
readmitrx/config/: cluster_metadata.yaml  feature_config.yaml  load_config.py  paths.py
readmitrx/core/: schemas.py
readmitrx/pipeline/: feature_engineering.py  preprocess.py  train_model.py
readmitrx/routing/: policy.py
readmitrx/utils/: labels.py  logging.py
scripts/: cluster_script.py  routing_script.py
tests/: test_cluster.py  test_feature_config.py  test_feature_engineering.py  test_policy.py  test_preprocess.py  test_schemas.py  test_train_model.py
tests/test_data/: sample_visits.csv
